<resources>
    <string name="app_name">Battleships</string>
    <string name="menu_title" translatable="true">Menu</string>
    <string name="menu_continue" translatable="true">Continue</string>
    <string name="menu_newVersusGame" translatable="true">New Versus Game</string>
    <string name="menu_newSoloGame" translatable="true">New Single Player Game</string>

    <string name="nextPlayer_instructionsPlayer1" translatable="true">Pass device to player 1.</string>
    <string name="nextPlayer_instructionsPlayer2" translatable="true">Pass device to player 2.</string>
    <string name="continueText" translatable="true">Continue</string>
    <string name="stopText" translatable="true">Stop!</string>

    <string name="battle_playerInTurn" translatable="true">Player in turn:</string>
    <string name="battle_player1" translatable="true">Player 1</string>
    <string name="battle_player2" translatable="true">Player 2</string>
    <string name="battle_numberOfHits" translatable="true">Number of hits:</string>

    <string name="confirmNewGame_message" translatable="true">Game is still in progress. Overwrite with new game? Previous game will be lost.</string>
    <string name="confirmNewGame_confirm" translatable="true">Yes</string>
    <string name="confirmNewGame_cancel" translatable="true">Cancel</string>

    <string name="newSinglePlayerGameMenu_easy" translatable="true">Easy</string>
    <string name="newSinglePlayerGameMenu_difficult" translatable="true">Difficult</string>
    <string name="newSinglePlayerGameMenu_title" translatable="true">Select difficulty level</string>

    <string name="battleView_showEnemyArea" translatable="true">Show enemy area</string>
    <string name="battleView_showFriendlyArea" translatable="true">Show friendly area</string>
    <string name="battleView_endTurn" translatable="true">End turn</string>
    <string name="battleView_instruction_tap" translatable="true">Tap on enemy area to attack</string>
    <string name="battleView_instruction_miss" translatable="true">That one missed!</string>
    <string name="battleView_instruction_hit" translatable="true">We hit them!</string>
    <string name="battleView_instruction_destroy" translatable="true">We sank their battleship!</string>
</resources>
